# animik

./: .gitignore  CMakeLists.txt  INSTALL  README  TODO  build  build.bat  qavimator.pro  reps.txt
documentation/: installation.html
etc/: make_bundle
etc/Animik.app/Contents/: Info.plist
src/: AbstractDocumentTab.cpp  AbstractDocumentTab.h  AnimationList.cpp  AnimationList.h  AnimationList.ui  Announcer.cpp  Announcer.h  Avbl.cpp  Avbl.h  Blender.cpp  Blender.h  BlenderTab.cpp  BlenderTab.h  BlenderTab.ui  BlenderTimeline.cpp  BlenderTimeline.h  CMakeLists.txt  FramesWeightFrame.cpp  FramesWeightFrame.h  FramesWeightFrame.ui  KeyFramerTab.cpp  KeyFramerTab.h  KeyFramerTab.ui  LimbsWeightDialog.cpp  LimbsWeightDialog.h  LimbsWeightDialog.ui  LimbsWeightForm.cpp  LimbsWeightForm.h  LimbsWeightForm.ui  MixZonesDialog.cpp  MixZonesDialog.h  MixZonesDialog.ui  NewFileDialog.cpp  NewFileDialog.h  NewFileDialog.ui  NoArrowsScrollArea.cpp  NoArrowsScrollArea.h  OptionalMessageBox.cpp  OptionalMessageBox.h  OptionalMessageBox.ui  (+57 more)
