# Sources
FILE ( GLOB QAVI_SRC *.cpp )
FILE ( GLOB QAVI_MOC_HDR *.h )
FILE ( GLOB QAVI_UI *.ui )
FILE ( GLOB QAVI_RSC *.qrc )

# Prepare and generate all needed sources and headers
QT4_ADD_RESOURCES (QAVI_RSC_SRC ${QAVI_RSC})
QT4_WRAP_UI (QAVI_UI_HDR ${QAVI_UI})
QT4_WRAP_CPP (QAVI_MOC_SRC ${QAVI_MOC_HDR})

# Include path to the generated header files
INCLUDE_DIRECTORIES (${CMAKE_BINARY_DIR}/src)

# Set defines
ADD_DEFINITIONS (-DQAVIMATOR_DATAPATH="${INSTALL_DATA_PATH}")

# No console on Windows
IF (CYGWIN OR MINGW OR WIN32)
	SET (EXE_TYPE WIN32)
ENDIF()

# Compile and link
ADD_EXECUTABLE (animik ${EXE_TYPE} ${QAVI_SRC} ${QAVI_MOC_SRC} ${QAVI_RSC_SRC} ${QAVI_UI_HDR})
TARGET_LINK_LIBRARIES (animik ${QT_QTCORE_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTGUI_LIBRARY} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} quat)

# Use static gcc lib
IF (CYGWIN OR MINGW)
	SET_TARGET_PROPERTIES(animik PROPERTIES LINK_FLAGS "-static-libgcc")
ENDIF()

# Install animik
INSTALL (TARGETS animik DESTINATION ${INSTALL_BIN})
